--- a/client/src/index.jade
+++ b/client/src/index.jade
@@ -72,8 +72,8 @@ html
                 |  - we first met on PlentyOfFish.com (unfortunately, we were not paid to advertise this)
                 br
                 b Tina
-                |  - I thought online dating was shady, but hey, desprate times call
-                | for desprate measures.
+                |  - I thought online dating was shady, but hey, desperate times call
+                | for desperate measures.
                 br
                 b Cody
                 |  - Wow, dang babe....  I knew I could find a quality African woman online
