adding some extra text

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -285,6 +285,16 @@ p
   .content
     text-align: center
 
+    .more
+      font-size: 24px
+      font-family: 'Playfair Display', serif
+      line-height: 50px
+      text-shadow: none
+
+      b
+        color: #6b4c75
+        text-shadow: 1px 1px white
+
   table
     border: none
     width: 100%
@@ -348,6 +358,15 @@ p
       font-size: 40px
       color: white
 
+    .more
+      font-size: 24px
+      font-family: 'Playfair Display', serif
+      line-height: 50px
+      text-shadow: none
+
+      b
+        color: #6b4c75
+        text-shadow: 1px 1px white
 #rsvp
   padding-top: 40px
   padding-bottom: 40px
