--- a/client/src/index.jade
+++ b/client/src/index.jade
@@ -113,7 +113,7 @@ html
         .row
           .col-md-5.square
             h1 The When
-          .col-md-7(class='.content')
+          .col-md-7.content
             table(border='1', bordercolor='#FFFF00', cellspacing='0', cellpadding='0', align='center')
               tr
                 td
@@ -147,10 +147,10 @@ html
                         font(size='3')
                           b Sat
                     tr
-                      td  
-                      td  
-                      td  
-                      td  
+                      td
+                      td
+                      td
+                      td
                       td(valign='top')
                         font
                           | 1
@@ -280,6 +280,10 @@ html
                           | 31
                           br
                     tr
+            .more
+              div You can <b>arrive</b> as early as <b>5pm</b> that <b>Friday, the 16th</b>
+              div The <b>ceremony</b> is planned to be on that <b>Sunday, the 18th</b>
+              div <b>Checkout</b> is by <b>10am Monday, the 19th</b>
     section#the-where
       .container
         .row
@@ -295,6 +299,10 @@ html
               br
               img(src='images/cabin.jpg')
               h3 Sevierville, TN 37863
+              .more
+                div Due to the limit bedrooms, there will be assigned sleeping arrangements. 
+                  | If you find your assigned sleeping arrangement uncomfortable, there are 
+                  | various hotels in the area within a short drive to the cabin.
     section#rsvp
       .container
         .row
